# pipewire-equalizer

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  pw-eq-demo
.github/actions/setup-nix-rust/: action.yml
.github/workflows/: ci.yml  release.yml
autoeq-api/: Cargo.toml
autoeq-api/src/: lib.rs  main.rs
keymap/: Cargo.toml
keymap/src/: lib.rs
pw-eq/: Cargo.toml  pw-eq.conf
pw-eq-imgui/: Cargo.toml
pw-eq-imgui/src/: autoeq.rs  filter.rs  main.rs  pipewire.rs  save_load.rs  state.rs
pw-eq/src/: filter.rs  lib.rs  main.rs  pw.rs  tui.rs
pw-eq/src/tui/: action.rs  autoeq.rs  draw.rs  eq.rs  theme.rs
pw-imgui/: Cargo.toml
pw-imgui/src/: autoeq.rs  filter.rs  main.rs  pipewire.rs  state.rs
pw-util/: Cargo.toml
pw-util/src/: api.rs  apo.rs  config.rs  lib.rs  module.rs  serde_ex.rs
spa-json/: Cargo.toml
spa-json/src/: de.rs  error.rs  iter.rs  lib.rs  macros.rs  map.rs  number.rs  read.rs  ser.rs  value.rs
spa-json/src/value/: de.rs  ser.rs
spa-json/tests/: macros.rs  ser.rs
