[workspace]
resolver = "3"
members = [
    "keymap",
    "pw-eq",
    "pw-util",
    "spa-json",
]

[workspace.dependencies]
pw-util = { path = "pw-util" }
keymap = { path = "keymap" }
spa-json = { path = "spa-json" }
pipewire = "0.9.2"
anyhow = "1.0.100"
tokio = "1.48.0"
serde = { version = "1.0.228" }
serde_json = { version = "1.0.147", features = ["preserve_order"] }
tracing = "0.1.44"
strum = { version = "0.26", features = ["derive"] }
