[package]
name = "pw-eq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
pw-util = { version = "0.1.0", path = "../pw-util" }
tabled = "0.20.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "sync"] }
serde_json.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
futures-util = "0.3.31"
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
shellish_parse = "2.2.0"
shellexpand = "3.1.1"
