[package]
name = "pw-eq"
version = "0.1.0"
edition = "2024"
default-run = "pw-eq"

[dependencies]
pw-util.workspace = true
keymap = { workspace = true, features = ["serde"] }
spa-json.workspace = true

anyhow.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
tabled = "0.20.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "sync"] }
serde_json.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
pipewire.workspace = true
ratatui = { version = "0.30.0", features = ["serde", "crossterm_0_29"], default-features = false }
futures-util = "0.3.31"
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
serde.workspace = true
shellish_parse = "2.2.0"
shellexpand = "3.1.1"
strum.workspace = true
tokio-stream = "0.1.17"
zi-input = { git = "https://github.com/andyyu2004/zi.git", features = ["crossterm", "serde"] }
dashmap = "6.1.0"
