[package]
name = "pw-util"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs", "process"] }
serde_json.workspace = true
spa-json.workspace = true
pipewire.workspace = true
pipewire-sys = "0.9.2"
strum.workspace = true

[dev-dependencies]
expect-test = "1.5.1"
